# os_logger

./: CMakeLists.txt  Doxyfile  README.md  Readme.md
include/: OS_Logger.h  OS_LoggerServerBackendConsole.h  OS_LoggerServerBackendFilesystem.h  seos_log_server.h  seos_log_server_backend_console.h  seos_log_server_backend_filesystem.h  seos_logger.h
lib/include/: OS_LoggerAbstractFormat.h  OS_LoggerAbstractObserver.h  OS_LoggerAbstractOutput.h  OS_LoggerAbstractSubject.h  OS_LoggerConsumer.h  OS_LoggerConsumerCallback.h  OS_LoggerConsumerChain.h  OS_LoggerDataBuffer.h  OS_LoggerEmitter.h  OS_LoggerEmitterCallback.h  OS_LoggerFile.h  OS_LoggerFileClient.h  OS_LoggerFileClientCallback.h  OS_LoggerFilter.h  OS_LoggerFormat.h  OS_LoggerListT.h  OS_LoggerOutput.h  OS_LoggerOutputConsole.h  OS_LoggerOutputFileSystem.h  OS_LoggerSubject.h  OS_LoggerSymbols.h  OS_LoggerTimestamp.h  abstract_format.h  abstract_log_output.h  abstract_observer.h  abstract_subject.h  consumer_chain.h  listT.h  log_consumer.h  log_consumer_callback.h  log_databuffer.h  log_emitter.h  log_emitter_callback.h  log_file.h  log_file_client.h  log_file_client_callback.h  log_filter.h  log_format.h  log_output.h  log_output_console.h  (+4 more)
lib/src/: OS_LoggerAbstractFormat.c  OS_LoggerAbstractObserver.c  OS_LoggerAbstractOutput.c  OS_LoggerAbstractSubject.c  OS_LoggerConsumer.c  OS_LoggerConsumerCallback.c  OS_LoggerConsumerChain.c  OS_LoggerDataBuffer.c  OS_LoggerEmitter.c  OS_LoggerEmitterCallback.c  OS_LoggerFile.c  OS_LoggerFileClient.c  OS_LoggerFileClientCallback.c  OS_LoggerFilter.c  OS_LoggerFormat.c  OS_LoggerListT.c  OS_LoggerOutput.c  OS_LoggerOutputConsole.c  OS_LoggerOutputFileSystem.c  OS_LoggerSubject.c  OS_LoggerTimestamp.c  consumer_chain.c  listT.c  log_consumer.c  log_consumer_callback.c  log_databuffer.c  log_emitter.c  log_emitter_callback.c  log_file.c  log_file_client.c  log_file_client_callback.c  log_filter.c  log_format.c  log_output.c  log_output_console.c  log_output_filesystem.c  log_subject.c  timestamp.c
